# macos-runner

./: .bazelrc  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  WORKSPACE  multitool.lock.json
.github/: renovate.json
.github/workflows/: bazel.yml  merge-bot.yml  update.yaml
lib/: BUILD.bazel  pkgbuild.bzl  pkgbuild_tars.sh.tpl
lib/bazel/: workplace_status.sh
